<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/repoListFragment">

    <fragment
        android:id="@+id/repoListFragment"
        android:name="com.stas1270.githubapi.ui.repolist.RepoListFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_repo_list">
        <action
            android:id="@+id/action_repoListFragment_to_repoDetailsFragment"
            app:destination="@id/repoDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/repoDetailsFragment"
        android:name="com.stas1270.githubapi.ui.repo_details.RepoDetailsFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_repo_details">
        <argument
            android:name="repo_id"
            app:argType="integer"
            android:defaultValue="-1" />
        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/repoListFragment" />
    </fragment>
</navigation>